# octopus

./: Arithmetic.hpp  BinaryOperation.hpp  CMakeLists.txt  Clock.hpp  CrossFade.hpp  Division.hpp  Fold.hpp  Group.cpp  Group.hpp  Impulse.hpp  Join.hpp  Latest.hpp  Negation.hpp  Node.cpp  Node.hpp  Octopus.hpp  Patch.cpp  Patch.hpp  Product.hpp  README.md  Sieve.hpp  Signal.hpp  SignalBase.cpp  SignalBase.hpp  Sine.hpp  Sink.cpp  Sink.hpp  Split.hpp  Subtraction.hpp  Sum.hpp  UnaryOperation.hpp  Value.hpp  arithmetic.hpp  binary_operation.hpp  cached_signal.hpp  clock.cpp  clock.hpp  constant.hpp  dirty.hpp  division.hpp  (+25 more)
documentation/: octopus.doxygen
